--- a/PushmiPullyu/Base.lproj/Main.storyboard
+++ b/PushmiPullyu/Base.lproj/Main.storyboard
@@ -43,8 +43,8 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w7r-N1-yeu">
-                                <rect key="frame" x="126" y="92" width="88" height="30"/>
-                                <state key="normal" title="Clear the log"/>
+                                <rect key="frame" x="126" y="92" width="61" height="30"/>
+                                <state key="normal" title="Clear log"/>
                                 <connections>
                                     <action selector="clearButtonTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="8HC-tn-Rf0"/>
                                 </connections>
@@ -56,26 +56,35 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cantina-logo" translatesAutoresizingMaskIntoConstraints="NO" id="VVH-WP-aeh">
-                                <rect key="frame" x="314" y="85" width="45" height="45"/>
+                                <rect key="frame" x="329" y="22" width="30" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="45" id="GWD-zp-84s"/>
+                                    <constraint firstAttribute="width" constant="30" id="GWD-zp-84s"/>
                                     <constraint firstAttribute="width" secondItem="VVH-WP-aeh" secondAttribute="height" multiplier="1:1" id="LF0-76-s6N"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1P8-h6-dWZ">
+                                <rect key="frame" x="265" y="92" width="94" height="30"/>
+                                <state key="normal" title="⚠️ Force quit"/>
+                                <connections>
+                                    <action selector="forceQuitButtonTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vwh-Ae-ePI"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="leadingMargin" secondItem="xQ1-nh-gpb" secondAttribute="leading" id="06P-cs-Ufg"/>
                             <constraint firstItem="b5j-pQ-qet" firstAttribute="leading" secondItem="2ff-aq-2ZG" secondAttribute="leading" id="4RW-5W-9ZX"/>
-                            <constraint firstItem="VVH-WP-aeh" firstAttribute="centerY" secondItem="w7r-N1-yeu" secondAttribute="centerY" id="9qC-9a-2zL"/>
                             <constraint firstItem="VVH-WP-aeh" firstAttribute="trailing" secondItem="TVb-4b-EU7" secondAttribute="trailing" id="AAF-9e-QAb"/>
                             <constraint firstAttribute="trailingMargin" secondItem="TVb-4b-EU7" secondAttribute="trailing" id="EJ7-e5-zRD"/>
                             <constraint firstItem="w7r-N1-yeu" firstAttribute="bottom" secondItem="xQ1-nh-gpb" secondAttribute="bottom" id="EPH-2L-RCY"/>
+                            <constraint firstItem="VVH-WP-aeh" firstAttribute="top" secondItem="xQ1-nh-gpb" secondAttribute="top" id="M7H-g4-VTC"/>
                             <constraint firstItem="w7r-N1-yeu" firstAttribute="leading" secondItem="2ff-aq-2ZG" secondAttribute="leading" id="NH6-6n-vc7"/>
                             <constraint firstItem="2ff-aq-2ZG" firstAttribute="top" secondItem="xQ1-nh-gpb" secondAttribute="top" id="SFy-NG-xZS"/>
                             <constraint firstItem="TVb-4b-EU7" firstAttribute="top" secondItem="xQ1-nh-gpb" secondAttribute="bottom" constant="10" id="TVJ-3q-nTC"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="TVb-4b-EU7" secondAttribute="bottom" constant="2" id="VaW-vF-Mvr"/>
                             <constraint firstItem="2ff-aq-2ZG" firstAttribute="leading" secondItem="xQ1-nh-gpb" secondAttribute="trailing" constant="10" id="YmO-dh-hZw"/>
+                            <constraint firstItem="1P8-h6-dWZ" firstAttribute="trailing" secondItem="TVb-4b-EU7" secondAttribute="trailing" id="fX7-bc-In7"/>
+                            <constraint firstItem="1P8-h6-dWZ" firstAttribute="centerY" secondItem="w7r-N1-yeu" secondAttribute="centerY" id="mHI-hG-yHM"/>
                             <constraint firstItem="b5j-pQ-qet" firstAttribute="top" secondItem="2ff-aq-2ZG" secondAttribute="bottom" id="qRI-Ye-O00"/>
                             <constraint firstItem="xQ1-nh-gpb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="2" id="yoB-fc-mL1"/>
                             <constraint firstAttribute="leadingMargin" secondItem="TVb-4b-EU7" secondAttribute="leading" id="zYR-s2-42r"/>
